# desafio-tecnico-bradesco

./: README.md  databricks.yml  pyproject.toml
.github/workflows/: cd-dev.yml  cd-homol.yml  cd-prod.yml  ci.yml
docs/evidence/: README.md
notebooks/: 00_free_edition_setup.py  01_ingest_landing.py  02_evaluate_groups.py  03_dispatch_groups.py  10_generate_demo_files.py  99_demo_run.py
sample_data/: README.md
sample_data/manifests/: example_manifests.jsonl
sample_data/parts/: example_parts.jsonl
src/ingestion_orchestrator/: __init__.py  audit.py  config.py  hashing.py  logging_utils.py  logic.py  parsing.py  schemas.py  utils.py
src/ingestion_orchestrator/jobs/: __init__.py  dispatch_groups.py  evaluate_groups.py  ingest_landing.py  simulate_landing.py
src/ingestion_orchestrator/services/: __init__.py  dispatch_service.py  files_service.py  groups_service.py  manifest_service.py
src/ingestion_orchestrator/sql/: ddl.sql  views.sql
tests/: test_dispatch.py  test_grouping.py  test_idempotency.py  test_manifest.py  test_parsing.py  test_timeout.py
